style.css
body::-webkit-scrollbar {
    display: none; /* hide scrollbar chrome and safari  */
}


body{
   margin: 0;
    -ms-overflow-style: none;  /* IE and Edge */
    scrollbar-width: none;  /* Firefox */
}

header{
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 10px;
}
header nav ul{
    display: flex;
}
header nav ul li{
    list-style: none;
    padding: 10px;
}

header nav ul li a{
    text-decoration: none;
    color: black;
}
header nav ul li a:hover{
    color: gray;
}

header a img{
    max-width: 4em;
    max-height: 4em;
}


.homepage h1{
    text-align: center;
    position: absolute;
    padding-top: 12%;
    padding-left: 10%;
    font-size: 5vw;
}


.homepage_image{
    max-width: 100%;
    max-height: 100%;

}


.about-boxes{

    min-width: 40%;
    width: 500px;
    margin: auto;
    padding: 15px;
    /*background-color: whitesmoke;*/
    /*border-radius: 25px;*/
    /*box-shadow: 10px 10px 10px gray;*/
}

.about-boxes h3{
    text-align: center;
    font-size: 3vw;
}


.about-boxes p{
    font-size: 2vw;
}


#education{
    display: flex;
    flex-wrap: wrap;
    margin: -4px;

}

#education img{
    max-width: 50%;
    max-height: 100%;
    min-width: 50%;
}
.about-boxes{

}

#work{
    display: flex;
    flex-wrap: wrap;
    justify-content: right;
}

#work img{
    max-width: 50%;
    max-height: 100%;
    min-width: 50%;


}
/*#work .about-boxes{*/
/*    max-width: 500px;*/
/*}*/

#projects{
    display: flex;
    flex-wrap: wrap;
}

#projects img{
    max-width: 50%;
    max-height: 100%;
    min-width: 50%;

}

footer{
    display: flex;
    justify-content: center;
}
footer p{

}

footer a{
    text-decoration: none;
    color: black;
}
footer a:hover{
    color: gray;
}


@media (max-width: 1099px) {

    .about-boxes{
        width: 90%;
    }
    .about-boxes h3{
        font-size: 7vw;
    }
    .about-boxes p{
        font-size: 5vw;
    }

    #education img
    {
       min-width: 100%;
    }
    #work img
    {
        min-width: 100%;
    }
    #projects img
    {
        min-width: 100%;
    }
}

